[gd_scene load_steps=5 format=3 uid="uid://c0ixydir5telo"]

[ext_resource type="Script" uid="uid://cp01b2mnfxfb4" path="res://UI/leaderboard.gd" id="1_mhe0q"]
[ext_resource type="PackedScene" uid="uid://d2qil4oibi2ok" path="res://world/exterior_background.tscn" id="2_mhe0q"]
[ext_resource type="Theme" uid="uid://ce2uyi827vc5x" path="res://addons/talo/samples/authentication/assets/theme.tres" id="2_nnvod"]
[ext_resource type="Theme" uid="uid://dagdkrfjqi2h5" path="res://UI/default.tres" id="4_bf62i"]

[node name="Leaderboard" type="Node2D"]
script = ExtResource("1_mhe0q")
leaderboard_internal_name = "High Score"

[node name="Background" parent="." instance=ExtResource("2_mhe0q")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 509.0
offset_bottom = 291.0

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
offset_right = 512.0
offset_bottom = 288.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12
alignment = 1

[node name="LeaderboardName" type="Label" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_nnvod")
text = "{leaderboard} entries"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Loading..."
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Entries" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 32)
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Username" type="TextEdit" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 15)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_bf62i")
theme_override_font_sizes/font_size = 12
placeholder_text = "Type your name..."

[node name="Submit" type="Button" parent="UI/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 25)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_bf62i")
text = "Submit Score"

[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/HBoxContainer/Submit" to="." method="_on_submit_pressed"]
